--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,16 +1,62 @@
 name: Automatisation des tests
 on: push
+
 jobs:
   Compilation:
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v2
       - name: Compilation
         run: |
-          last_directory=$(basename ${{ runner.workspace }})
-          git clone https://github.com/${{ github.repository }}.git
-          cd ./$last_directory
           mkdir build
           cd build
           cmake ..
           make
           make test
+
+  Test_Add:
+    runs-on: ubuntu-latest
+    needs: Compilation
+    steps:
+      - uses: actions/checkout@v2
+      - name: Test fonction add
+        run: ./src/calculator add 10 5
+
+  Test_Sub:
+    runs-on: ubuntu-latest
+    needs: Compilation
+    steps:
+      - uses: actions/checkout@v2
+      - name: Test fonction sub
+        run: ./src/calculator sub 10 5
+
+  Test_Mul:
+    runs-on: ubuntu-latest
+    needs: Compilation
+    steps:
+      - uses: actions/checkout@v2
+      - name: Test fonction mul
+        run: ./src/calculator mul 10 5
+
+  Test_Div:
+    runs-on: ubuntu-latest
+    needs: Compilation
+    steps:
+      - uses: actions/checkout@v2
+      - name: Test fonction div
+        run: ./src/calculator div 10 5
+
+  Test_Car:
+    runs-on: ubuntu-latest
+    needs: Compilation
+    steps:
+      - uses: actions/checkout@v2
+      - name: Test fonction car
+        run: ./src/calculator car 6
+
+  Deploy:
+    runs-on: ubuntu-latest
+    needs: [Test_Add, Test_Sub, Test_Mul, Test_Div, Test_Car]
+    steps:
+      - name: Déploiement
+        run: echo "Déploiement de la solution"
